--- a/merryyou-security-browser/pom.xml
+++ b/merryyou-security-browser/pom.xml
@@ -22,6 +22,11 @@
             <groupId>org.springframework.session</groupId>
             <artifactId>spring-session</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
     </dependencies>
+
 
 </project>
