增加注释和实现记住我功能（验证码功能测试失败）

--- a/merryyou-security-demo/src/main/resources/application.yml
+++ b/merryyou-security-demo/src/main/resources/application.yml
@@ -21,5 +21,10 @@ security:
 merryyou:
   security:
     browser:
-#      loginPage: /demo-signIn.html
+#      loginPage: /demo-signIn.html #自定义登陆界面
       loginType: REDIRECT
+#    code:
+#      image:
+#        length: 6  #验证码长度
+#        width: 100  #验证码宽度
+#        url: /user,/user/* #验证码拦截的url
