--- a/merryyou-security-demo/src/main/resources/application.yml
+++ b/merryyou-security-demo/src/main/resources/application.yml
@@ -18,9 +18,10 @@ security:
     enabled: true
 
 #自定义登录页面
-#merryyou:
-#  security:
-#    browser:
+merryyou:
+  security:
+    browser:
+      signUpUrl: /demo-signUp.html
 #      loginPage: /demo-signIn.html #自定义登陆界面
 #      loginType: REDIRECT
 #    code:
@@ -28,3 +29,9 @@ security:
 #        length: 6  #验证码长度
 #        width: 100  #验证码宽度
 #        url: /user,/user/* #验证码拦截的url
+    social:
+      qq:
+        app-id:
+        app-secrit:
+        providerId: callback.do
+      filterProcessesUrl: /qqLogin
