Spring Social 微信社交登录（还未测试）

--- a/merryyou-security-demo/src/main/resources/application.yml
+++ b/merryyou-security-demo/src/main/resources/application.yml
@@ -32,6 +32,9 @@ merryyou:
     social:
       qq:
         app-id:
-        app-secrit:
+        app-secret:
         providerId: callback.do
+      weixin:
+        app-id:
+        app-secret:
       filterProcessesUrl: /qqLogin
