--- a/merryyou-security-demo/pom.xml
+++ b/merryyou-security-demo/pom.xml
@@ -13,9 +13,14 @@
     <artifactId>merryyou-security-demo</artifactId>
 
     <dependencies>
+        <!--<dependency>-->
+            <!--<groupId>cn.merryyou.security</groupId>-->
+            <!--<artifactId>merryyou-security-browser</artifactId>-->
+            <!--<version>1.0-SNAPSHOT</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>cn.merryyou.security</groupId>
-            <artifactId>merryyou-security-browser</artifactId>
+            <artifactId>merryyou-security-app</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
