--- a/merryyou-security-demo/src/main/resources/application.yml
+++ b/merryyou-security-demo/src/main/resources/application.yml
@@ -11,7 +11,6 @@ spring:
     host: localhost
     port: 6380
 
-
 #端口
 server:
   port: 8060
@@ -22,6 +21,10 @@ server:
 security:
   basic:
     enabled: true
+  oauth2:
+    client:
+      clientId: merryyou
+      clientSecret: merryyousecret
 
 #自定义登录页面
 merryyou:
