--- a/merryyou-security-demo/pom.xml
+++ b/merryyou-security-demo/pom.xml
@@ -13,21 +13,21 @@
     <artifactId>merryyou-security-demo</artifactId>
 
     <dependencies>
-        <dependency>
-            <groupId>cn.merryyou.security</groupId>
-            <artifactId>merryyou-security-browser</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>cn.merryyou.security</groupId>-->
+            <!--<artifactId>merryyou-security-browser</artifactId>-->
+            <!--<version>1.0-SNAPSHOT</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>cn.merryyou.security</groupId>
             <artifactId>merryyou-security-authnorize</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>cn.merryyou.security</groupId>-->
-            <!--<artifactId>merryyou-security-app</artifactId>-->
-            <!--<version>1.0-SNAPSHOT</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>cn.merryyou.security</groupId>
+            <artifactId>merryyou-security-app</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
