--- a/merryyou-security-demo/src/main/resources/application.yml
+++ b/merryyou-security-demo/src/main/resources/application.yml
@@ -39,11 +39,11 @@ merryyou:
 #        length: 6  #验证码长度
 #        width: 100  #验证码宽度
 #        url: /user,/user/* #验证码拦截的url
-#    social:
-#      qq:
-#        app-id:
-#        app-secret:
-#        providerId: callback.do
+    social:
+      qq:
+        app-id: 101448999
+        app-secret: 1d958787a87559bad371c0a9e26eef61
+        providerId: callback.do
 #      weixin:
 #        app-id:
 #        app-secret:
