添加测试类返回用户信息

--- a/merryyou-security-demo/src/main/resources/application.yml
+++ b/merryyou-security-demo/src/main/resources/application.yml
@@ -48,8 +48,8 @@ merryyou:
 #        app-id:
 #        app-secret:
 #      filterProcessesUrl: /qqLogin
-#    oauth2:
-#      clients[0]:
-#        clientId: merryyou
-#        clientSecret: merryyousecret
-#        accessTokenValiditySeconds: 7200
+    oauth2:
+      clients[0]:
+        clientId: merryyou
+        clientSecret: merryyousecret
+        accessTokenValiditySeconds: 7200
